
2.15 - Not Released yet
     - Implemented a logger() method that uses Apache::Log (inspired by https://rt.cpan.org/Ticket/Display.html?id=75675)
     - Address 'Error Message Inconsistency' https://rt.cpan.org/Ticket/Display.html?id=75725
     - Address ' If user is not active, it produces 2 errors'  https://rt.cpan.org/Ticket/Display.html?id=75724

2.14 - Sat Mar 26 09:41:01 PDT 2011
     - Changed documentation about WhateverDBI_SecretKey to
       address https://rt.cpan.org/Ticket/Display.html?id=62488
     - Fixes for https://rt.cpan.org/Public/Bug/Display.html?id=66336
       (_dbi_connect should be called as a class method.)

2.13 - Sat Dec 18 10:33:19 PST 2010
     - Build system uses Module::Build (generates a Makefile.PL for compatability.)
     - Distro version now matches module version (2.13)
     - Fixed statement handle still active <https://rt.cpan.org/Public/Bug/Display.html?id=57906>
       Also added support for WhatEverDBI_UserActiveField
       Thanks to Chad Columbus
     - Fixed $HEX_STRING_REGEX definition is wrong <https://rt.cpan.org/Public/Bug/Display.html?id=46117>
       Thanks to Joe Ingersoll
     - Fixed User authenticated if not in MySQL database <https://rt.cpan.org/Ticket/Display.html?id=62470>
       Thanks to Keith Lawson
     - Fixed Login.pl example - syntax error <https://rt.cpan.org/Public/Bug/Display.html?id=62487>
       (also moved from eg/public-pl/login.pl to eg/bin/login.pl)
       Thanks to William McKee http://search.cpan.org/~wmckee/
     - Updated documentation to cover protecting the DocumentRoot <https://rt.cpan.org/Ticket/Display.html?id=51593>
     - Now depends on DBI 1.40 instead of Apache::DBI - <https://rt.cpan.org/Ticket/Display.html?id=43083>

2.05 - Thu May 14 18:37:07 PDT 2009
       - Fixed bug in _get_cipher_type() where it was not memoizing the
         Crypt::CBC objects.
       - Fixed https://rt.cpan.org/Ticket/Display.html?id=45207